--- a/JuegoTimbiriche/pom.xml
+++ b/JuegoTimbiriche/pom.xml
@@ -14,7 +14,8 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>DominioTimbiriche</artifactId>
-            <version>${project.version}</version>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
     <properties>
